# ganman

./: CMakeLists.txt  README.md
src/: CameraListModel.cpp  CameraListModel.h  CaptureBase.cpp  CaptureBase.h  CaptureCamera.cpp  CaptureCamera.h  CaptureDisplay.cpp  CaptureDisplay.h  CaptureManager.cpp  CaptureManager.h  DisplayListModel.cpp  DisplayListModel.h  ImageListModel.cpp  ImageListModel.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  ScreenCapture.cpp  ScreenCapture.h  main.cpp
